src/containers/projects/project-card/ProjectCard.css
.project-card > .card {
  width: 80vw;

  & > .header {
    display: flex;
    justify-content: space-between;
    width: 100%;
  }

  & > .header > .title {
    font-weight: bolder;
    padding-bottom: 0.5rem;
    margin: 0;
  }

  & > .header > .info {
    display: flex;
    justify-content: space-between;
  }

  .title {
    --text-shadow-distance: 0.25rem;

    margin: 0;
    height: 100%;
    padding-top: var(--margins-size);

    font-family: var(--app-title-font);
    text-shadow: var(--text-shadow-distance) var(--text-shadow-distance)
      var(--app-title-font-shadow);
    text-transform: uppercase;
  }
}

.project-description {
  font-size: medium;
  text-align: left;
}

.project-links {
  font-size: medium;
  text-align: left;

  & > h4 {
    margin-top: 0;
    font-weight: bold;
  }

  a,
  a:visited,
  a:hover,
  a:active {
    color: var(--text-positive-color);
  }
}

.project-images {
  width: calc(100% - 2rem);
}

